Fix T45086: Crash showing scopes

Was a rounding issue, which was previously solved by quite simple check.
Well, let's do the same check again :)